# OJSubmitter

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
.github/workflows/: commit-check.yml  pr-code-check.yml  pr-fmt.yml  release-package.yml  remove-ready-label.yml  remove-ready-on-merge.yml  remove-ready.yml
scripts/: build.py  compile_ui.py  conf_dev.py  debug.py
src/CLI/: __init__.py  logger.py  main.py
src/CLI/Constant/: docstring.py  log_fields.py
src/CLI/Typehint/: common.py
src/CLI/Util/: color_print.py  dynamic_loader.py  string_tools.py
src/GUI/: __init__.py  handlers.py  logger.py  main.py
src/GUI/Constant/: log_fields.py
src/GUI/Typehint/: qt_items.py
src/GUI/UI/: UI_main.py  __init__.py  main.ui
src/GUI/Util/: qt_tools.py  string_tools.py
src/GUI/components/: account_logic.py  log_browser_logic.py  problem_logic.py  settings_logic.py
src/OJSubmitter/Constant/: about.py  defaults.py  fields.py  request_consts.py  resource.py  status.py
src/OJSubmitter/Crawler/: crawler.py
src/OJSubmitter/Interface/: log_interface.py
src/OJSubmitter/Models/: identify.py  resource.py
src/OJSubmitter/Remote/: remote_ctl.py
src/OJSubmitter/Resource/: __init__.py
src/OJSubmitter/Store/: shared_instances.py
src/OJSubmitter/Typehint/: login.py  problem.py  remote_cfg.py
src/Typehint/: basic.py
src/Util/: common.py  function_linker.py  functiontools.py
tools/: clean.py  code_format.py  help.py  import_sort.py  pre_cmt.py  type_check.py
