[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OJSubmitter"
version = "1.3.5"
description = "A PyQt6 based oj homework submission application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "colorama>=0.4.6",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pyqt6>=6.4.2",
    "pyqt6-tools>=6.4.2.3.3",
    "qdarkstyle>=3.2.3",
    "requests>=2.32.5",
    "types-colorama>=0.4.15.20250801",
    "types-requests>=2.32.4.20250913",
]

[project.optional-dependencies]
fmt-packs = ["isort>=7.0.0", "black>=25.9.0"]
tpc-packs = ["mypy>=1.18.2"]
build-packs = ["nuitka>=2.8.3"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
# scripts
build = "scripts.build:main"
debug = "scripts.debug:main"
conf_dev = "scripts.conf_dev:main"
cui = "scripts.compile_ui:main"
# tools
help = "tools.help:main"
clean = "tools.clean:main"
tpc = "tools.type_check:main"
fmt = "tools.code_format:main"
pcmt = "tools.pre_cmt:main"
# application entry point
run = "main:main"
